Fix: spacing below form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,6 +111,10 @@ h2 {
     border: none;
 }
 
+#reservation-form {
+    padding-bottom: 2rem;
+}
+
 /* Footer / contact */
 
 #contact {
